refactoring and add Test

--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,11 @@
             <artifactId>spark-template-pebble</artifactId>
             <version>2.3</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.11</version> <!-- Or whatever JUnit you're using. -->
+        </dependency>
     </dependencies>
 
 
