--- a/lugreact/package.json
+++ b/lugreact/package.json
@@ -3,10 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.1.1",
+    "bootstrap": "^4.1.3",
+    "react": "^16.4.1",
     "react-bootstrap": "^0.31.5",
-    "react-dom": "^16.1.1",
-    "react-scripts": "1.0.17"
+    "react-dom": "^16.4.1",
+    "react-scripts": "1.0.17",
+    "reactstrap": "^6.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
